--- a/.github/workflows/main_ccdiseaseprediction.yml
+++ b/.github/workflows/main_ccdiseaseprediction.yml
@@ -28,7 +28,7 @@ jobs:
           source venv/bin/activate
       
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install streamlit == 0.83.0
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       
