--- a/.github/workflows/main_ccdiseaseprediction.yml
+++ b/.github/workflows/main_ccdiseaseprediction.yml
@@ -2,7 +2,7 @@
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 # More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
 
-name: Build and deploy Python app to Azure Web App - CCDiseasePrediction
+name: Build and deploy Python app to Azure Web App - CCDiseaseprediction
 
 on:
   push:
@@ -58,6 +58,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
-          app-name: 'CCDiseasePrediction'
+          app-name: 'CCDiseaseprediction'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_C56FC60D8A384D669C506435643D215C }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_6E16FEDE415B49F2BBE49D37C08DD4FD }}
